tests/api/reference/negative/11-push-byte-range.asm
const invalid: bytes = bytes.push(b"A", 256)
